--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "proxy": "http://localhost:3001",
+  "proxy": "https://dipakblogserver.herokuapp.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
